style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;800;900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family:'Montserrat', sans-serif;
}

section{
    position: relative;
    width: 100%;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    background:url(musicmind-background.jpg)no-repeat;
    background-size: cover;
    background-position: center;
    box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.7);
}

header{
    position: relative;
    top: 0;
    width: 100%;
    /* padding: 30px 100px; */
    padding: 1.5vw 4.5vw;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
}

header h2 {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
}

header .logo{
    position: relative; 
    align-self: center;
    color: #0056FF;
    font-size: 30px;
    text-decoration: none;
    font-weight: 600;
    letter-spacing: 1px;
    margin: 5px;
    font-family:'Montserrat', sans-serif;

}

header .navigation a{
    color: #FFFFFF;
    text-decoration: none;
    font-weight: 500;
    font-size: 20px;
    letter-spacing: 1px;
    padding: 2px 15px;
    border-radius: 10px;
    text-transform: uppercase;
    transition: 0.3s;
    transition-property: background;
    font-family:'Montserrat', sans-serif;
}

header .navigation a:not(:last-child) {
    margin-right: 1.5vw;
}

header .navigation a:hover{
    background: #0056ff;
}

.content{
    max-width: 100vw;
    max-height: 100vh;
    padding: 1.5vw 4.5vw;
    /* margin: 60px 100px; */
    display: flex;
    flex-grow: 1;
    align-items: center;
    color: #FFFFFF;
    justify-content: content;
}

.content .info h2{
    color: #FFFFFF;
    font-size: 45px;
    letter-spacing: 5px;
    font-weight: 800;
    text-transform: uppercase;
    line-height: 50px;
    margin-bottom: 10px;

}


.content .info p{
    font-family: 'Source Sans 3', sans-serif;
    font-size: 26px;
    font-weight: 300;
    letter-spacing: 1px;
    text-align: start;
    margin-bottom: 25px;
}

.content .info form{
    display: flex;
    align-items: center;
    flex-wrap: wrap;
}

.content .info input{
    height: 50px;
    width: 320px;
    border-radius: 8px;
    text-indent: 10px;
    font-family: 'Source Sans 3', sans-serif;
    font-weight: 300;
    font-size: 18px;
    letter-spacing: 0.8px;
    border-style: solid;
    border: none;
    background-color: #d9d9d9;
    opacity: 0.8;
}

.icon-buttons {
    height: 50px; 
    background-color: transparent;
    border: none;
    color: #FFFFFF;
    filter: invert(100%);
    margin-left: 20px;
    cursor: pointer;

}

.info #tymsg {
    position: absolute;
    margin-top: 10px;
    font-family: 'Source Sans 3', sans-serif;
    font-weight: 300;
    font-size: 18px;
    letter-spacing: 0.8px;
    color: lightgray;

}
/* 
about page */



.subpage-content {
    padding: 1.5vw 4.5vw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex-grow: 1;
    align-items: flex-start;



  }

.subpage-content h2{
    color: #FFFFFF;
    font-size: 45px;
    letter-spacing: 1.5px;
    font-weight: 600;
    text-transform: uppercase;
    line-height: 50px;
    margin-bottom: 10px;
}

.subpage-content p,a{
    color: #FFFFFF;
    text-align: left;
    font-family: 'Source Sans 3', sans-serif;
    font-size: 24px;
    font-weight: 300;
    letter-spacing: 1px;
    margin: 8px 0px;


}

.link {
    color: #0056FF;
}

.link:visited{
    color: #FFFFFF;
}

#light-blue {
    color: #00d6ff; 
}

/* contact page */

.contact-container {
    padding: 1.5vw 4.5vw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex-grow: 1;
    align-items: center;
}

.contact-container #contact-form{
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    margin: 20px;
}

.contact-container h2{
    color: #FFFFFF;
    font-size: 45px;
    letter-spacing: 5px;
    font-weight: 800;
    line-height: 50px;
    margin-bottom: 10px;
}

.contact-container h4{
    color: #FFFFFF;
    font-family: 'Source Sans 3', sans-serif;
    font-size: 20px;
    font-weight: 300;
    letter-spacing: 1px;
    margin-bottom: 5px;

}

.contact-container .info-box {
    height: 40px;
    width: 380px;
    border-radius: 8px;
    text-indent: 10px;
    font-family: 'Source Sans 3', sans-serif;
    font-weight: 300;
    font-size: 18px;
    letter-spacing: 0.8px;
    border-style: solid;
    border: none;
    background-color: #d9d9d9;
    opacity: 0.8;
    margin-bottom: 15px;
}

.contact-container .info-box#message-box{
    height: 150px;
    padding: 5px;
    text-indent: 0px;
}

.contact-container #message-button {
    align-self: center;
    background-color: transparent;
    color: #FFFFFF;
    padding: 5px 15px;
    margin: 30px;
    height: 50px;
    font-family:'Montserrat', sans-serif;
    font-weight: 400;
    font-size: 20px;
    letter-spacing: 1.5px;
    border: solid;
    border-color: #FFFFFF;
    border-radius: 20px;

}

